tests/compile-fail/pcap_socket_dropped_before_packet.stderr
error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/compile-fail/pcap_socket_dropped_before_packet.rs:17:9
   |
17 | // TODO
   |         ^ consider adding a `main` function to `$DIR/tests/compile-fail/pcap_socket_dropped_before_packet.rs`
